@@ -56,7 +56,7 @@ will be shared.
 You can call the CD.get_name() and CD.get_id() functions
 without initializing the CD object.
 <br>&nbsp;<br>
-Be sure to understand the difference between the cdrom module
+Be sure to understand there is a difference between the cdrom module
 and the CD objects.
 
 <hr>
